Separating folder for thymeleaf

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <!--<div id="header" th:include="page :: header"></div>-->
+        <!--<div id="header" th:include="template_page :: header"></div>-->
 
         <div id="content">
             <h1>Welcome to Customer</h1>
@@ -18,6 +18,6 @@
             <br/>
 
         </div>
-        <!--<div id="footer" th:include="page :: copy"></div>-->
+        <!--<div id="footer" th:include="template_page :: copy"></div>-->
     </body>
 </html>
